Add updates for branch web2

--- a/src/resource/views/bill_admin.hbs
+++ b/src/resource/views/bill_admin.hbs
@@ -189,6 +189,6 @@
   </div>
 {{/if}}
   <!-- Nút quay lại đơn hàng -->
-  <a href="/cart">
+  <a href="/homepage">
     <button type="button" class="btn btn-success" style="float: right; margin-left: 16px">Quay lại đơn hàng</button>
   </a>
