--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -62,7 +62,10 @@
   <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Role and User</button>
 </a>
 <a href="/homepage/bill_admin" style="color: #F8F9FA;">
-  <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Bill</button>
+  <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Bill User</button>
+</a>
+<a href="/homepage/import_bill" style="color: #F8F9FA;">
+  <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Bill Import</button>
 </a>
 <script src="/js/home.js"></script>
 {{! <a href='/homepage/list_users'>
