--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -26,7 +26,7 @@
               >{{this.name}}</b></h4>
             <div style="display: inline-flex; justify-content:space-between; width:100%">
               <h5 style="color: brown;">brand:{{this.brand_name}}</h5>
-              <h5>{{this.price}}$</h5>
+              <h5>{{this.price}}.000 VNĐ</h5>
             </div>
             <p class="card-text">Mô tả: {{this.description}}</p>
             <div style="display: inline-flex; justify-content:space-between; width:100%;align-items:center">
