--- a/src/resource/views/product.hbs
+++ b/src/resource/views/product.hbs
@@ -41,7 +41,7 @@
       >Giá hiện tại: </b><b
         id="price"
         style="color: rgba(200, 0, 0, 0.7);font-size: 32px;"
-      >{{product.gia}}</b>
+      >{{product.price}}.000 VNĐ</b>
       <button class="addToCart-detail" onclick="showSuccessToast(event)">
         <i class="bi bi-cart-plus-fill" style="font-size: 28px;"></i>
       </button>
