--- a/src/resource/views/bill_admin.hbs
+++ b/src/resource/views/bill_admin.hbs
@@ -61,7 +61,14 @@
           </div>
         </div>
         <div class="mt-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-info btn-sm"><a href="/homepage/bill_admin/{{this.id_bill}}">Confirm</a></button>
+          <button type="button" class="btn btn-info btn-sm">
+            <a href="/homepage/bill_admin/{{this.id_bill}}" class="text-white fs-5 text-decoration-none">Confirm</a>
+          </button>
+
+          <!-- Nút Delete -->
+          <button type="button" class="btn btn-danger btn-sm ms-2" onclick="deleteBill({{this.id_bill}},{{this.id_user}})">
+            <span class="text-white fs-5">Delete</span>
+          </button>
         </div>
       {{/each}}
     </div>
@@ -131,3 +138,4 @@
 <a href="/homepage">
   <button type="button" class="btn btn-success" style="float: right; margin-left: 16px">Quay lại đơn hàng</button>
 </a>
+<script src="/js/bill_admin.js"></script>
