--- a/src/resource/views/cart.hbs
+++ b/src/resource/views/cart.hbs
@@ -36,7 +36,7 @@
             <input type="checkbox" style="transform: scale(1.5);" />
           </td>
           <td style="vertical-align: middle; text-align:center;">
-            <a href="/cart/delete/{{this.id_cart}}">Delete</a>
+            <a href="#" onclick="confirmDelete({{this.id_cart}})">Delete</a>
           </td>
         </tr>
       {{/each}}
