--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -1,6 +1,6 @@
 <div class="image-slider">
   <div class="slides-container">
-    <img src="/image/kobiet.jpg" class="slide active" id="slide" />
+    <img src="/image/cuahang1.jpg" class="slide active" id="slide" />
   </div>
 </div>
 
