--- a/src/resource/views/register.hbs
+++ b/src/resource/views/register.hbs
@@ -24,6 +24,10 @@
                   </select>
                 </div>
                 <div class="form-outline form-white mb-4">
+                  <div class="form-outline form-white mb-4">
+                    <label class="form-label text-left">Email</label>
+                    <input type="email" id="email" class="form-control form-control-lg" name="email" required />
+                  </div>
                   <label class="form-label text-left">Age</label>
                   <input id="Age" class="form-control form-control-lg" name="Age" type="text" required />
                 </div>
@@ -35,7 +39,6 @@
                   <label class="form-label text-left" for="typePasswordX">Password</label>
                   <input type="password" id="password" class="form-control form-control-lg" name="password" required />
                 </div>
-
                 {{! <p class="small mb-5 pb-lg-2"><a
                     class="text-white-50"
                     href="#!"
